KE-42016 Supports semantically equivalent scd2 join conditions and derived queries. KE-42707 & KE-42715
KE-42715 Support semantically equivalent scd2 join conditions. For example: "a >= b and c > a" is equivalent to "a >= b and a < c".
KE-42707 Support derived query for extended scd2.